--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
     </header>
 
     <main role="main" class="inner cover">
-      <h1 class="cover-heading">Cover your page.</h1>
-      <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the
-        text, and add your own fullscreen background photo to make it your own.</p>
+      <h1 class="cover-heading">Hey, _its12am!</h1>
+      <p class="lead">This page will be the cover page of 12am projects.</p>
       <p class="lead">
         <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
       </p>
