--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="d3vk" content="">
 
   <title>_its12am</title>
 
@@ -41,7 +41,7 @@
     <footer class="mastfoot mt-auto">
       <div class="inner">
         <p>Template by <a href="https://getbootstrap.com/">Bootstrap</a></p>
-        <p><a href="#">Terms of Services</a> <a href="#">Privacy Policy</a></p>
+        <p><a href="tos.html">Terms of Services</a> <a href="privacy.html">Privacy Policy</a></p>
       </div>
     </footer>
   </div>
